added documentation and bugfix BASH_SOURCE when sourced
Added documentation.
Also, for SetupHCPPipeline.sh, BASH_SOURCE[0] is empty when executed
inside a sourced script. So let’s now take the dirname of the caller
(not the sourced) script.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ########################
 # Study specific files #
 ########################
-*_davidLRM.sh
+RunStructuralBatch_*.sh
 
 
 ###############################
