--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ########################
 # Study specific files #
 ########################
-#RunStructuralBatch_*.sh
+RunStructuralBatch_*.sh
 
 
 ###############################
